2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (assign_control_character)
	(assign_no_break_control_character): Fix blunders in `assert()`
	usage.  I'm trying to make groff safe for builds using `NDEBUG`.
	That can't be achieved if we wrap substantive function calls (or
	expressions with side effects) with `assert()`.

	Continues commit e09bc6c083, 7 May 2023 (but not merged onto the
	master branch until after the groff 1.23.0 release).

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (assign_control_character)
	(assign_no_break_control_character): Improve diagnostics when
	user fumbles control character selections.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (assign_escape_character): Improve
	diagnostic when user fumbles escape character selection.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::add_node): Add assertion.
	This function should never be given a null pointer argument.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::make_tag): When not
	formatting HTML, return a new transparent dummy node instead of
	a null pointer.  When this function was implemented in
	2001-2004, the decision to return a null pointer violated an
	{undocumented, possibly uncontemplated} invariant that
	`environment::add_node()` was never passed a null pointer.  By a
	returning an actual object, we can restore that invariant.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Fix code style nits.
	(environment::make_tab_node): Parenthesize formally complex
	expression.
	(environment::make_tab_node, environment::advance_to_tab_stop):
	Explicitly compare value of pointer type to null pointer literal
	instead of letting it pun down to a Boolean.  Revise logic for