@@ -6053,9 +6053,8 @@ static bool read_size(int *x) // \s
     val *= sizescale;
   }
   else if (!want_att_compat && !tok.is_usable_as_delimiter())
-    warning(WARN_DELIM, "interpreting %1 as an escape sequence"
-	    " delimiter; it is ambiguous because it can also begin a"
-	    " numeric expression", tok.description());
+    warning(WARN_DELIM, "using %1 as an escape sequence delimiter"
+			" is deprecated", tok.description());
   else if (want_att_compat
            && !tok.is_usable_as_delimiter(false,
 		  DELIMITER_ATT_STRING_EXPRESSION)) {
